# NiTE2Sample

./: README.md
sample/Gesture/: CMakeLists.txt  device.cpp  device.h  util.h
sample/Hand/: CMakeLists.txt  device.cpp  device.h  util.h
sample/Pose/: CMakeLists.txt  FindNiTE2.cmake  FindOpenNI2.cmake  device.cpp  device.h
sample/Skeleton/: CMakeLists.txt  device.cpp  device.h  main.cpp  util.h
sample/User/: CMakeLists.txt  device.cpp  device.h  util.h
